public/css/arithmetic-styles.css
* {
  margin: 0px;
  padding: 0px;
  box-sizing: border-box;
  font-family: roboto;
}

body {
  overflow: hidden;
  height: 100vh;
  width: 100vw;
}

#shoheuken {
  background-color: black;
  color: orange;
  padding: 5px;
}

.hidden {
  display: none;
}

#calculator {
  /* margin-left: auto;
  margin-right: auto; */
  text-align: center;
  color: greenyellow;
  font-size: 1.5em;
}

.instructions {
  font-size: 2em;
  color: red;
}
.overlay {
  position: absolute;
  top: 1;
  /* left: 1; */
  width: 100vw;
  height: 100vh;
  background-color: rgba(0, 0, 0, 0.6);
  backdrop-filter: blur(3px);
  z-index: 5;
}

.level-setting {
  position: absolute;
  margin: 0;
  top: 8%;
  /* height: 90vh; */
  /* max-height: 100%; */
  width: auto;
  border-radius: 10px;
  background-color: white;
  z-index: 9;
  text-align: center;
  border-style: solid;
  overflow: scroll;
  /* display: inline-block; */
}

.multiples-setting {
  position: absolute;
  margin: auto;
  top: 31%;
  height: 400px;
  width: 400px;
  border-radius: 10px;
  background-color: yellow;
  z-index: 10;
  text-align: center;
  border-style: solid;
}
.attempt-number {
  position: absolute;
  font-size: 6em;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  opacity: 0.5;
}
.level-setting .btn,
.multiples-setting .btn {
  margin: 5px 0;
}
.summary-setting {
  display: inline-block;
}

/* .summary-grid-box {
  display: inline-flexbox;
  flex-direction: row;
} */

/* .summary-item-right {
  text-align: right;
}
.summary-item-left {
  text-align: left;
} */

.summary-status {
  -webkit-text-stroke: 1px grey;
}
.extra-practice {
  margin-right: 10px;
}

.btn-summary {
  background-color: black;
  color: greenyellow;
  padding: 5px;
  margin-left: 5px;
}

.summary-container {
  z-index: 999;
  position: absolute;
  margin: auto;
  top: 2%;
  /* max-height: 100%; */
  max-width: 95%;
  height: 95%;
  width: 500px;
  border-radius: 10px;
  background-color: white;
  z-index: 999;
  text-align: left;
  border-style: solid;
  overflow: auto;
  padding-left: 10px;
}

table {
  margin-top: 2%;
}

.start-box {
  position: absolute;
  margin: auto;
  top: 31%;
  height: 400px;
  width: 400px;
  border-radius: 10px;
  background-color: white;
  z-index: 9;
  text-align: center;
  border-style: solid;
}
.start-text {
  position: relative;
  top: 5%;
  font-size: 1.5em;
}
.start-button {
  position: absolute;
  top: 75%;
  font-size: 25px;
  width: 80%;
  left: 50%;
  -ms-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
}

.back-button {
  position: absolute;
  top: 90%;
  left: 50%;
  -ms-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
}

.countDownTimer {
  position: absolute;
  margin: auto;
  z-index: 10;
  font-size: 500px;
}

.finalBox {
  position: absolute;
  margin: auto;
  top: 31%;
  height: 400px;
  width: 400px;
  border-radius: 10px;
  background-color: white;
  z-index: 9;
  text-align: center;
  border-style: solid;
}
.finalTextBox {
  position: relative;
  top: 5%;
  font-size: 2em;
}

.main-container {
  position: static;
  width: 100%;
  height: 100vh;
  background: antiquewhite;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.optionsBox {
  text-align: left;
  position: absolute;
  margin: auto;
  padding-bottom: 2%;
  top: 2%;
  left: 5%;
  height: auto;
  max-width: 400px;
  max-height: 95%;
  width: auto;
  border-radius: 10px;
  background-color: whitesmoke;
  z-index: 9;
  border-style: solid;
  overflow: auto;
}

.title-box {
  margin-bottom: 25px;
  text-align: center;
}

.main-box {
  width: 400px;
  height: 400px;
  background: skyblue;
  display: flex;
  flex-direction: column;
  align-items: center;
  border-radius: 10px;
  border-style: solid;
  border-color: black;
  overflow: auto;
}

.score-board {
  width: 100%;
  margin-top: 5%;
}

table {
  width: 100%;
  text-align: center;
}

.heading {
  font-size: 15px;
}

#current-score,
#current-mistake,
#timer,
#questionTimer {
  font-size: 25px;
  font-weight: 600;
}

.display-problems {
  text-align: center;
  font-size: 50px;
  font-weight: 600;
  margin: 30px 0;
  letter-spacing: 2px;
}
.help-me-text {
  text-align: center;
  font-size: 30px;
  margin: 20px 0 0;
}

.display-problems-two {
  text-align: center;
  font-size: 50px;
  font-weight: 600;
  margin: 0 25px 15px;
  letter-spacing: 2px;
}
.line,
.lineFrac {
  width: 70px;
  height: 0;
  border-bottom: 5px solid black;
}
.simple-fraction-whole-number {
  font-size: 60px;
}

.fraction-choice,
.help-me-text {
  text-align: center;
  font-size: 2em;
  color: grey;
  margin: 0;
  -webkit-text-stroke-width: 1px;
  -webkit-text-stroke-color: black;
}
.center {
  text-align: center;
}
.working {
  font-size: 1.5em;
  /* position: relative; */
  margin-bottom: 20%;
  letter-spacing: 5px;
}

.working td {
  text-align: right;
}

.workingAnswer {
  border-top: solid;
}

.input-box {
  position: relative;
  height: 50px;
  width: 175px;
  font-size: 45px;
  top: 70%;
  left: 50%;
  -ms-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
}

.specialBorder {
  border-style: solid 1px;
  border-color: black;
}

button {
  margin: auto;
  display: block;
}

.instructions {
  font-size: 1.5em;
  font-weight: 900;
}

.animate-right {
  color: limegreen;
  transform: scale(1.5);
}

.animate-wrong {
  color: red;
  transform: scale(1.5);
}

.animate-wrong-container {
  background-color: red;
}

.mistakesCount {
  color: red;
  font-weight: strong;
}

.secondUnitMeasurement {
  position: relative;
  font-weight: bold;
  font-size: 40px;
  bottom: 50px;
}

.settingButton {
  width: 100px;
}
.btn-close {
  position: sticky;
  /* left: 50%; */
  opacity: 50%;
  bottom: 1%;
  left: 50%;
  -ms-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
}

.btn-average {
  background-color: #7d0ff1;
}

.btn-percentage {
  background-color: orange;
}

.btn-geometry {
  background-color: olive;
}

.btn-time {
  background-color: #f6ff33;
}

.btn-angle {
  background-color: #40e0d0;
}

.btn-algebra {
  background-color: #b533ff;
}

.btn-speed {
  background-color: #acff33;
}

.btn-select {
  border-style: solid;
  border-width: 2px;
  border-color: purple;
}

.btn-heu {
  background-color: #512e5f;
  color: #f1c40f;
  border-color: #f1c40f;
  border: solid 2px;
}

.btn-heu:hover {
  background-color: #f1c40f;
  color: #512e5f;
  border-color: #512e5f;
}

.btn-cal {
  background-color: #acadbc;
  color: #000500;
  border-color: #6665dd;
}

.btn-cal:hover {
  background-color: #6665dd;
  color: #000500;
  border-color: #acadbc;
  border: solid 2px;
}

.submit2 {
  display: flex;
  align-items: center;
}

.fa-reveal {
  color: red;
}

img {
  height: 100px;
}

#canvas1 {
  position: relative;
}

@media (max-width: 500px) {
  .level-setting {
    width: auto;
    position: static;
  }
}

